--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2020-01-25" />
+<meta name="date" content="2020-01-26" />
 
 <title>Third Door Information:</title>
 
@@ -268,7 +268,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">SHAMP</a>
+      <a class="navbar-brand" href="index.html">Third Door Information</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -294,7 +294,7 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore">Third Door Information:</h1>
-<h4 class="date">2020-01-25</h4>
+<h4 class="date">2020-01-26</h4>
 
 </div>
 
