--- a/introduction.html
+++ b/introduction.html
@@ -373,10 +373,7 @@ div.tocify {
 </div>
 
 
-<p><br></p>
-<div id="third-door-does-cool-work-to-find-out-what-works-best-psh" class="section level2">
-<h2>Third door does cool work to find out what works best (PSH)</h2>
-</div>
+<p>This website is meant to be a repository for showing storing and communicating the research that has been done for Third Door.</p>
 
 
 
