--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2020-01-28" />
+<meta name="date" content="2020-02-04" />
 
 <title>Third Door Information:</title>
 
@@ -294,7 +294,7 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore">Third Door Information:</h1>
-<h4 class="date">2020-01-28</h4>
+<h4 class="date">2020-02-04</h4>
 
 </div>
 
@@ -303,6 +303,10 @@ $(document).ready(function () {
 <p>This website is meant to contain all of the information that Russel and Adam have been working on getting to you.</p>
 <p>The chapters included are:</p>
 <table>
+<colgroup>
+<col width="25%" />
+<col width="75%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th>Chapter</th>
@@ -313,6 +317,14 @@ $(document).ready(function () {
 <tr class="odd">
 <td>Introduction</td>
 <td>Project purpose and rationale for data source selections</td>
+</tr>
+<tr class="even">
+<td>Project Cost Breakdown</td>
+<td>Estimates for the costs of projects based on various scenarios and exemptions.</td>
+</tr>
+<tr class="odd">
+<td>Permiting and Inspection times</td>
+<td>Summary of data from the City of Seattle’s data on permiting times both from request to permit issuing and permit issuing to inspection.</td>
 </tr>
 </tbody>
 </table>
