--- a/permit_times.html
+++ b/permit_times.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Russel Willems and Adam Elder" />
 
 
-<title>Summary of Data</title>
+<title>Permiting and Inspection Times</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -381,7 +381,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Summary of Data</h1>
+<h1 class="title toc-ignore">Permiting and Inspection Times</h1>
 <h4 class="author">Russel Willems and Adam Elder</h4>
 <h4 class="date">1/22/2020</h4>
 
